--- a/templates/messages.html
+++ b/templates/messages.html
@@ -126,18 +126,18 @@
         if (window.innerWidth<=430){
             $('#opcioneslistasconv').removeClass('list-group-horizontal');
         }
-        var div = document.querySelector('.menuinferior');
-        if (window.innerWidth<=997){
-            console.log('no los muestro');
+        // var div = document.querySelector('.menuinferior');
+        // if (window.innerWidth<=997){
+        //     console.log('no los muestro');
             
-            // Apply style to div
-            div.setAttribute('style', 'display: flex');
-        }
-        else{
-            console.log('no los muestro');
-            // Apply style to div
-            div.setAttribute('style', 'display: none');
-        }
+        //     // Apply style to div
+        //     div.setAttribute('style', 'display: flex');
+        // }
+        // else{
+        //     console.log('no los muestro');
+        //     // Apply style to div
+        //     div.setAttribute('style', 'display: none');
+        // }
     });
     window.addEventListener('resize', function(){
         if (window.innerWidth<=430){
@@ -149,15 +149,15 @@
             //}
         }
         
-        var div = document.querySelector('.menuinferior');
-        if (window.innerWidth<=997){
-            console.log('no los muestro')
-            div.setAttribute('style', 'display: flex');
-        }
-        else{
-            console.log('no los muestro')
-            div.setAttribute('style', 'display: none');
-        }
+        // var div = document.querySelector('.menuinferior');
+        // if (window.innerWidth<=997){
+        //     console.log('no los muestro')
+        //     div.setAttribute('style', 'display: flex');
+        // }
+        // else{
+        //     console.log('no los muestro')
+        //     div.setAttribute('style', 'display: none');
+        // }
     });
 
     function Visible(option)
