--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,10 @@ ese posible mensaje a messages, with es la forma de declarar una variable cuando
     {% for publication in publications %}
         <div class="">
             <div class="card" >
-                <img src="{{publication.3}}"height="200" width="500" class="card-img-top img-fluid" alt="{{publication.1}}">
+                <a href="/publication/{{publication.0}}">
+                    <img src="{{publication.3}}"height="200" width="500" class="card-img-top img-fluid" alt="{{publication.1}}">
+                </a>
+                
                 <div class="card-body">
                     <h5 class="card-title" style="text-overflow: ellipsis; overflow: hidden;white-space: nowrap;">{{publication.1}}</h5>
                 </div>
@@ -182,13 +185,6 @@ ese posible mensaje a messages, with es la forma de declarar una variable cuando
                         {% endif %}
                         {%endwith%}
                     </div>
-                    <div class="row">
-                        <a class="btn col-md-12" href="/publication/{{publication.0}}">
-                            <i class="far fa-eye"></i> <b>Ver Publicacion</b>
-                        </a>
-                    </div>
-                    
-                    
                 </div>
             </div>
         </div>
@@ -277,7 +273,7 @@ ese posible mensaje a messages, with es la forma de declarar una variable cuando
 
     <div class="menuinferior">
         <div class="contenedormenu">
-            <a class="btn-menufloat btn-lg" href="/" style="color: rgb(255, 255, 255); background-color: black; border-radius: 50%;"><i class="fas fa-home"></i></a>
+            <a class="btn-menufloat btn-lg" href="/" style="color: rgb(255, 255, 255); background-color: black; border-bottom: 5px rgb(255, 255, 255) solid;"><i class="fas fa-home"></i></a>
             <a class="btn-menufloat btn-lg" href="/SearchResult/0.___" ><i class="fas fa-search"></i></a>
             <a class="btn-menufloat btn-lg" href="/crearPublicacion/0"><i class="fas fa-plus"></i></a>
             {% if is_logged() %}
