--- a/templates/publication.html
+++ b/templates/publication.html
@@ -314,7 +314,7 @@
 
 <div class="menuinferior">
     <div class="contenedormenu">
-        <a class="btn-menufloat btn-lg" href="/"><i class="fas fa-home"></i></a>
+        <a class="btn-menufloat btn-lg"  href="/"><i class="fas fa-home"></i></a>
         <a class="btn-menufloat btn-lg"><i class="fas fa-search"></i></a>
         <a class="btn-menufloat btn-lg" href="/crearPublicacion/0"><i class="fas fa-plus"></i></a>
         {% if is_logged() %}
@@ -331,31 +331,31 @@
 
 
 <script>
-    $(document).ready(function(){
-        var div = document.querySelector('.menuinferior');
-        if (window.innerWidth<=997){
-            console.log('no los muestro');
+    // $(document).ready(function(){
+    //     var div = document.querySelector('.menuinferior');
+    //     if (window.innerWidth<=997){
+    //         console.log('no los muestro');
             
-            // Apply style to div
-            div.setAttribute('style', 'display: flex');
-        }
-        else{
-            console.log('no los muestro');
-            // Apply style to div
-            div.setAttribute('style', 'display: none');
-        }
-    });
-    window.addEventListener('resize', function(){
-        var div = document.querySelector('.menuinferior');
-        if (window.innerWidth<=997){
-            console.log('no los muestro')
-            div.setAttribute('style', 'display: flex');
-        }
-        else{
-            console.log('no los muestro')
-            div.setAttribute('style', 'display: none');
-        }
-    });
+    //         // Apply style to div
+    //         div.setAttribute('style', 'display: flex');
+    //     }
+    //     else{
+    //         console.log('no los muestro');
+    //         // Apply style to div
+    //         div.setAttribute('style', 'display: none');
+    //     }
+    // });
+    // window.addEventListener('resize', function(){
+    //     var div = document.querySelector('.menuinferior');
+    //     if (window.innerWidth<=997){
+    //         console.log('no los muestro')
+    //         div.setAttribute('style', 'display: flex');
+    //     }
+    //     else{
+    //         console.log('no los muestro')
+    //         div.setAttribute('style', 'display: none');
+    //     }
+    // });
     
     function LikeChange(idpub)
     {
