--- a/templates/buscaminas.html
+++ b/templates/buscaminas.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
@@ -23,7 +24,7 @@
 #divbuttons{
     text-align: center;
     padding: 10px;
-    
+
 }
 table{
     background: slategray;
@@ -35,20 +36,22 @@ td{
     text-align: center;
     font-size: 120%;
     color: white;
-    
+
 }
 #juego-nuevo,
 td,
 #minas,
 #ajustes,
-#tiempo{
+#tiempo,
+#vidas{
     box-shadow: inset 3px 3px 0 0 rgba(255, 255, 255, 0.25),
                 inset -3px -3px 0 0 rgba(0, 0, 0, 0.25);
 }
 #juego-nuevo,
 #minas,
 #ajustes,
-#tiempo{
+#tiempo,
+#vidas{
     padding: 10px;
     margin: 20px;
 }
@@ -67,6 +70,11 @@ td,
 #tiempo{
     background: black;
     color: blueviolet;
+    transition-duration: 1s;
+}
+#vidas{
+    background: black;
+    color: blueviolet;
 }
 .celdaranking{
     color: black;
@@ -80,10 +88,13 @@ td,
         Juego Nuevo
     </span>
     <span id="minas">
-        000
+         <i class="fas fa-flag"></i> 000
     </span>
     <span id="tiempo">
-        000
+       <i class="fas fa-stopwatch"></i> 000
+    </span>
+    <span id="vidas">
+        <i class="fas fa-heart"></i> 3
     </span>
     <span id="ajustes" onclick="ajustes()">
         <i class="fas fa-cog"></i>
@@ -91,9 +102,9 @@ td,
 </div>
 <br>
 <div class="divtabla" id="divtabla" oncontextmenu="return false">
-    
+
     <table cellspacing=0 cellpadding=0 id="tablero" >
-        
+
     </table>
 </div>
 
